# CooperativeAttention

./: CMakeLists.txt  LICENSE  README
shaders/: sdpa_flash.comp
src/: frontend.py  sdpa_flash.cpp  visualize_perf.py
